chore: jswork scope

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "keywords": [
     "ushell",
-    "unix",
-    "shell",
-    "system",
-    "infomation"
+    "os",
+    "system"
   ],
   "author": "afei",
   "license": "MIT",
